tests/fail/semantics/widget_extend_unknown_target/main.kira
// `extend` must target a known construct family.
extend NoSuchConstruct {
    function foo() -> Int {
        return 0
    }
}

@Main
function main() {
    return
}
